# stock-stream

./: .gitignore  Makefile  README.md  notes.md
datacron/yahoo-finance/: .daily.env  Dockerfile  Dockerfile-aws-alpine  Dockerfile-aws-slim  Makefile  aws_lamdba.py  awslambda.py  awslamdba.py  deploy_image.sh  devenv.sh  eda.ipynb  getdata.ipynb  hello.py  launch_dkr.sh  launch_dkr_custom_image.sh  local.env  local_setup_lambdaric_rie.sh  localdaily.env  logconfig.yaml  logconfig_aws.yaml  mock_lambda_caller.py  paramselect.py  pyproject.toml  requirements-cntnr.txt  requirements-dev.txt  requirements.txt  source.py  symbols.yml
datastream/yahoo-finance/: source.py
live-analysis/alpha_factor/: cerebro_test.py  hello.py  pyproject.toml
live-analysis/basic_df_bt/: hello.py  install_talib.sh  pyproject.toml
live-analysis/custom_backtest/: hello.py  pyproject.toml  rsi.py  rsi_db.ipynb  rsi_duckdb.py  test.py
tf-iaac/: README.md  apply.sh
tf-iaac/datacron/yahoo-finance/: README.md
tf-iaac/state_store/: readme.md
tf-iaac/state_store/dev/: backend.hcl  main.tf
tf-iaac/state_store/modules/state_store/: main.tf
tf-iaac/state_store/prod/: main.tf
tf-iaac/state_store/staging/: main.tf
tf-iaac/yahoo-finance-cron/: README.md  readme.md
tf-iaac/yahoo-finance-cron/dev/: main.tf
tf-iaac/yahoo-finance-cron/dev/pipeline/: .terraform.lock.hcl  data.tf  main.tf  variables.tf
tf-iaac/yahoo-finance-cron/dev/storage/: main.tf  outputs.tf
tf-iaac/yahoo-finance-cron/global/: main.tf
tf-iaac/yahoo-finance-cron/modules/pipeline/: .terraform.lock.hcl  locals.tf  (+3 more)
(+11 files in other folders)
