[project]
name = "yfinance-lambda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2024.11.0",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "s3fs>=2024.12.0",
    "yfinance>=0.2.51",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "boto3>=1.35.81",
    "duckdb>=1.1.3",
    "jupyterlab>=4.3.4",
    "parquet-cli>=1.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.4",
]
