[project]
name = "custom-backtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.0",
    "pandas>=2.2.3",
    "polars>=1.22.0",
    "pyarrow>=19.0.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
    "plotly>=6.0.0",
    "kaleido==0.2.1",
    "matplotlib>=3.10.0",
]
